Refactores user's index page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+    h1, h3, h4 {
+      font-family: 'Roboto', sans-serif;
+      font-size: 48px;
+      color: #7c8081;
+    }
+
+    h3 {
+      font-family: 'Roboto', sans-serif;
+      font-size: 32px;
+    }
