adds twitter sign in button on new home screen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
 
   <title>Shift | Coding Challenge</title>
 
-  <script src="/js/vendor/jquery-1.11.1.js"></script>
+  <!-- <script src="/js/vendor/jquery-1.11.1.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="/js/vendor/angular.js"></script>
   <script src="/js/vendor/angular-route.js"></script>
   <script src="/bower_components/angular-messages/angular-messages.js"></script>
