--- a/public/js/templates/home.html
+++ b/public/js/templates/home.html
@@ -113,7 +113,7 @@
                     <div class="slide-text">
                         <h1>We Are Creative Nerds</h1>
                         <p>Boudin doner frankfurter pig. Cow shank bresaola pork loin tri-tip tongue venison pork belly meatloaf short loin landjaeger biltong beef ribs shankle chicken andouille.</p>
-                        <a href="#" class="btn btn-common">SIGN UP</a>
+                        <a href="/auth/twitter"><img src='http://newbornstartups.com/wp-content/plugins/wordpress-social-login/assets/img/32x32/wpzoom/twitter.png'/></a>
                     </div>
                     <img src="/img/home/slider/hill.png" class="slider-hill" alt="slider image">
                     <img src="/img/home/slider/house.png" class="slider-house" alt="slider image">
@@ -330,10 +330,12 @@
     </footer>
     <!--/#footer-->
 
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/lightbox.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>   
+    <!-- <script type="text/javascript" src="js/jquery.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> -->
+    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript" src="js/lightbox.min.js"></script> -->
+    <script type="text/javascript" src="js/vendor/wow.min.js"></script>
+    <script type="text/javascript" src="js/vendor/main.js"></script>   
 </body>
 </html>
